Generics_Super_WildCard/Code5_error_report.txt
javac errors for Code5.java 
Code5.java:27: error: no suitable method found for add(T)
        list.add(number);
            ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
  where T is a type-variable:
    T extends Object declared in method <T>addNumber(List<? super Integer>,T)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: Integer from capture of ? super Integer
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 
============================================================================= 
ExtendJ errors for Code5.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code5.java:8: error: cannot assign variable list3 of type java.util.List<java.lang.Number> a value of type java.util.List<java.lang.Double>
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code5.java:13: error: cannot assign variable list4 of type java.util.List<java.lang.Number> a value of type java.util.List<java.lang.Comparable<? extends & java.lang.Integer& java.lang.Double> & java.lang.Number>
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code5.java:27: error: no method named add(T) in java.util.List<? super Integer> matches. However, there is a method add(wildcards.? super Integer)
 
============================================================================= 
Eclipse ECJ errors for Code5.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code5.java (at line 27)
	list.add(number);
	     ^^^
The method add(capture#4-of ? super Integer) in the type List<capture#4-of ? super Integer> is not applicable for the arguments (T)
----------
1 problem (1 error)
